option java_package = "com.cncnc.protobuf.chat";
option java_outer_classname = "Chat";

message CPrivateChat {
	required string self = 1;       //发送消息者的userid
	required string dest = 2;       //消息目标的userid
	required string content = 3;    //消息内容
}

message SPrivateChat {
    required  string content = 1;   //接收到的消息内容
}